# os_laba_2

./: CMakeLists.txt
include/: ParallelQuickSort.hpp  ThreadWrapper.hpp
src/: ParallelQuickSort.cpp  ThreadWrapper.cpp  main.cpp
